--- a/index.html
+++ b/index.html
@@ -560,10 +560,10 @@
             <p>
                 Although the approval of our items was not immediate, the items were finally added to Wikidata, thus contributing to the community. Below are the two items we managed to add to Wikidata.</p>
                 <figure typeof="sa:Image">
-                    <img src="fair.png" width="880" height="655">
+                    <img src="fair.PNG" width="880" height="655">
                 </figure>
                 <figure typeof="sa:Image">
-                    <img src="helmet.png" width="880" height="655">
+                    <img src="helmet.PNG" width="880" height="655">
                 </figure>
             <p>
                 Some of the images used in our application ar etaken from the Palace of Culture's site and some were taken by us when visiting the museums for research.
