--- a/index.html
+++ b/index.html
@@ -532,6 +532,10 @@
                     <li>User friendly and interactive interface</li>
                 </ul>
             </p>
+        <h2>App architecture </h2>
+        <figure typeof="sa:Image">
+                    <img src="arch.PNG" width="880" height="655">
+                </figure>
         </section>
         <section id="scop">
             <h1>Implemented API</h1>
