--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             </p>
         <h2>App architecture </h2>
         <figure typeof="sa:Image">
-                    <img src="arch.PNG" width="880" height="655">
+                    <img src="arch.png" width="880" height="655">
                 </figure>
         </section>
         <section id="scop">
