--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                     <li>Deployed application in Google Cloud environment</li>
                     <li>Authentication and login</li>
                     <li>Museums floor plan and presentation of each's museum exhibitions</li>
-                    <li>QR code exhibit information search</li>
+                    <li>QR code exhibit information search via SPARQL query</li>
                     <li>User friendly and interactive interface</li>
                 </ul>
             </p>
